# est

./: .env.example  .gitignore  Cargo.nix  Cargo.toml  LICENSE.md  NOTES.md  README.md  flake.nix  nix-refresh.sh
examples/: manifold.est
fe/: index.html  index.js  package-lock.json  package.json  webpack.dev.config.ts
fe/src/: index.html
lang/: Cargo.toml  package.json
lang/src/: calculator1.lalrpop  lib.rs
lang/src/markets/: https.rs  mod.rs
lang/src/markets/types/: manifold.rs  proba.rs
nb/: main.ipynb  main.org  main.py  requirements.txt
nix/: buildinputs.nix  shell.nix
nix/checks/: default.nix  format.nix
nix/est/: default.nix
nix/lang/: crates.nix
src/: lib.rs
src/markets/: https.rs
src/markets/types/: mod.rs
src/test_data/: will-carrick-flynn-win-the-general.json
streamlit/: main.py  pyproject.toml
web/: package.json  webpack.dev.config.ts
web/src/: CarrickAsync.tsx  index.html  index.tsx
website/: package-lock.json
