[tool.poetry]
name = "est-streamlit"
version = "0.1.0"
description = "Notebook of Manifold API experiments; liquidity measurements and so on"
authors = ["Quinn Dougherty <quinn@quinnd.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "est_streamlit"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"
requests = "^2.31.0"
pandas = "^2.1.1"
manifoldpy = "^1.1.2"
matplotlib = "^3.8.0"
altair = "^5.1.2"
manifoldpy = { url = "https://github.com/vluzko/manifoldpy/archive/361680bdd7f27aabf1cb3246494b7655fcfe9980.tar.gz" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
